--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Crect x='10' y='18' width='28' height='24' rx='3' fill='%23166534'/%3E%3Cpath d='M2 12 L8 12 L12 8 L16 16 L20 4 L24 14 L28 10 L32 12 L36 8 L40 12 L46 12' stroke='%2322c55e' stroke-width='2.5' fill='none'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CirPlane - Planejamento de Cirurgias</title>
   </head>
